// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-input-currency Should render with args {
  label: 'label',
  identifier: 'identifier',
  readonly: true,
  value: '1234567890'
}: 1`] = `
<mg-input-currency value="1234567890">
  <mock:shadow-root>
    <div class="mg-input mg-input--currency">
      <mg-label identifier="identifier">
        label
      </mg-label>
      <div class="mg-input__input-container">
        <strong>
          1 234 567 890,00&nbsp;€
        </strong>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-currency>
`;

exports[`mg-input-currency Should render with args {
  label: 'label',
  identifier: 'identifier',
  tooltip: 'My Tooltip Message'
}: 1`] = `
<mg-input-currency>
  <mock:shadow-root>
    <div class="mg-input mg-input--currency">
      <mg-label identifier="identifier">
        label
      </mg-label>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <input aria-describedby="" id="identifier" name="identifier" type="text">
          <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
            <mg-icon icon="info"></mg-icon>
          </mg-tooltip>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-currency>
`;

exports[`mg-input-currency Should render with args { label: 'label', identifier: 'identifier' }: 1`] = `
<mg-input-currency>
  <mock:shadow-root>
    <div class="mg-input mg-input--currency">
      <mg-label identifier="identifier">
        label
      </mg-label>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <input aria-describedby="" id="identifier" name="identifier" type="text">
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-currency>
`;

exports[`mg-input-currency Should render with args { label: 'label', identifier: 'identifier', labelOnTop: true }: 1`] = `
<mg-input-currency>
  <mock:shadow-root>
    <div class="is-label-on-top mg-input mg-input--currency">
      <mg-label identifier="identifier">
        label
      </mg-label>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <input aria-describedby="" id="identifier" name="identifier" type="text">
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-currency>
`;

exports[`mg-input-currency Should render with args { label: 'label', identifier: 'identifier', readonly: true }: 1`] = `
<mg-input-currency>
  <mock:shadow-root>
    <div class="mg-input mg-input--currency">
      <mg-label identifier="identifier">
        label
      </mg-label>
      <div class="mg-input__input-container">
        <strong></strong>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-currency>
`;

exports[`mg-input-currency Should trigger events 1`] = `
<mg-input-currency>
  <mock:shadow-root>
    <div class="is-focused mg-input mg-input--currency">
      <mg-label identifier="identifier">
        label
      </mg-label>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <input aria-describedby="identifier-help-text" id="identifier" name="identifier" type="text">
        </div>
        <mg-help-text identifier="identifier-help-text">
          My help text
        </mg-help-text>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-currency>
`;
